--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -1,4 +1,4 @@
-.about-container {
+.About {
   margin-top: 80px;
   display: flex;
   height: 70vh;
@@ -55,4 +55,29 @@
       }
     }
   }
+}
+
+@media screen and (max-width: 680px) { 
+    .About {
+
+        .about-left {
+            display: none;
+        }
+
+        .about-right {
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            .text {
+                margin: 0;
+            }
+
+            h1 {
+                font-size: 2.2rem;
+            }
+        }
+    }
 }
