--- a/src/components/product/Product.scss
+++ b/src/components/product/Product.scss
@@ -1,5 +1,5 @@
 .product-container {
-    min-width: 32%;
+    min-width: 280px;
     border: 1px solid rgb(215, 214, 214);
     border-radius: 20px;
     padding: 20px;
@@ -37,4 +37,7 @@
         cursor: pointer;
       }
 
+}
+
+@media screen and (max-width: 680px) {
 }
