--- a/src/App.scss
+++ b/src/App.scss
@@ -1,15 +1,18 @@
 .App {
     .product-list {
         margin-top: 100px;
-        margin-inline: 70px;
-
+        
         h1 {
             margin-bottom: 40px;
+            text-align: center;
             font-size: 2rem;
             color: rgb(11, 80, 149);
         }
         .products {
             display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-wrap: wrap;
             gap: 30px;
         }
 
