Ready to deploy

--- a/src/components/product/Product.scss
+++ b/src/components/product/Product.scss
@@ -34,7 +34,7 @@
             padding-block: 20px;
 
             h3 {
-                color: rgb(11, 80, 149);
+                color: #0E2368;
             }
 
             .desc {
@@ -54,7 +54,7 @@
               }
 
               .btn-primary:hover {
-                background-color: rgb(11, 80, 149);
+                background-color: #0E2368;
                 color: white;
               }
         }
