--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -34,7 +34,7 @@
 
       h1 {
         font-size: 2.7rem;
-        color: rgb(11, 80, 149);
+        color: #0E2368;
 
         .absord {
           color: red;
