--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -28,6 +28,10 @@
             margin-block: 40px;
             overflow: hidden;
             flex: 1;
+
+            h3 {
+                color: #0E2368;
+            }
             
             .contact {
                 
@@ -42,6 +46,10 @@
         .more {
             flex: 0.7;
             margin-block: 40px;
+
+            .title {
+                color: #0E2368;
+            }
             
             .company {
                 
@@ -61,6 +69,11 @@
             padding-block: 10px;
     
             .social-top {
+                margin-block: 30px;
+
+                h3 {
+                    color: #0E2368;
+                }
     
                 .follow {
                     display: flex;
