--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -1,4 +1,4 @@
-.container {
+.Hero {
     display: flex;
 
     .hero-left {
@@ -6,7 +6,7 @@
 
         .logo {
             margin-block: 40px;
-            margin-left: 70px;
+            margin-left: 100px;
             width: 64px;
             height: 64px;
 
@@ -20,12 +20,13 @@
         .tag-line {
     
             .text {
-                margin-left: 70px;
+                margin-left: 100px;
                 width: 45%;
                 
                 h1 {
                     font-size: 2.7rem;
-                    color: rgb(11, 80, 149);
+                    font-weight: 700;
+                    color: #0E2368;
 
                     .absord {
                         color: red;
@@ -59,13 +60,10 @@
 
     .hero-right {
         flex: 1;
+        position: relative;
         .pizza-container{
             width: 100%;
             height: 100%;
-            // // min-width: 300px;
-            // // min-height: 300px;
-            // width: 650px;
-            // height: 650px;
 
             img {
                 width: 100%;
@@ -76,11 +74,30 @@
             }
         }
 
+        .btn-primary {
+            position: absolute;
+            top: 0;
+            right: 20px;
+            border: 2px solid white;
+            margin-block: 20px;
+            font-size: 1.1rem;
+            font-weight: bold;
+            padding: 14px 28px;
+            border-radius: 40px;
+            background-color: transparent;
+            color: rgb(255, 255, 255);
+            cursor: pointer;
+          }
+
+          .btn-primary:hover {
+            background-color: #ce2b2b;
+          }
+
     }
 }
 
 @media screen and (max-width: 680px) {
-    .container {
+    .Hero {
         flex-direction: column-reverse;
 
         .hero-left {
